--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -38,6 +38,7 @@ isThought: true
 - https://jayweeks.com/medusae/ - 3D medusae
 - https://nuclearsecrecy.com/nukemap/ - nuclear bomb simulator
 - https://www.blankwindows.com/
+- https://hoodmaps.com/
 - https://www.omfgdogs.com/ - dogs
 - https://oskarstalberg.com/Townscaper/ - 3D city
 - https://artsandculture.google.com/project/fashion
@@ -49,8 +50,8 @@ isThought: true
 - https://sid.ethz.ch/fonts/ - fonts files with a random button
 - https://www.programmingfonts.org/ - test programming fonts
 - https://www.nerdfonts.com/ - programming fonts
-- https://digitalattackmap.com/
-- https://typings.gg/
+- https://digitalattackmap.com/ - DDoS map
+- https://typings.gg/ - typing game
 - https://www.youtube.com/watch?v=-5tak0tHqIg - externOS
 - https://github.com/GitSquared/edex-ui
 - https://github.com/lowlighter/gracidea - a Pokémon 2D live map
@@ -100,7 +101,7 @@ isThought: true
 - https://github.com/dendibakh/perf-ninja - performance optimization
 - http://loeildelaphotographie.com
 - https://lgtm.com/#explore
-- https://hoodmaps.com/
+- https://www.loisirs-nautic.fr/ - boat license
 - https://makelinux.github.io/kernel/map/ - Linux kernel map
 - https://devhints.io/ - cheatsheets
 - https://learngitbranching.js.org/ - learn git
@@ -179,7 +180,6 @@ isThought: true
 - https://wiki.osdev.org/ - osdev wiki
 - https://cure53.de/ - pentest reports
 - https://github.com/bregman-arie/devops-exercises
-- https://digitalattackmap.com/ - DDoS map
 - https://github.com/airbnb/javascript - JavaScript Style Guide
 - https://raytracing.github.io/ - learn how to do raytracing
 - https://cstack.github.io/db_tutorial/ - build a clone of sqlite from scratch
@@ -195,6 +195,7 @@ isThought: true
 - https://lwn.net/ - Linux Weekly News and FOSS
 - https://missing.csail.mit.edu/ - missing CS semester
 - https://www.c-language.org/ - C language
+- http://libpng.org/ - libpng reference
 - https://wiki.mozilla.org/Areweyet
 - https://c-git.github.io/
 - https://paroj.github.io/gltut/ - modern 3D graphics programming
@@ -208,6 +209,8 @@ isThought: true
 - https://www.youtube.com/watch?v=oz9cEqFynHU - data structures and algorithms in 15 minutes
 - https://www.server-world.info/en/ - server configuration
 - https://www.learndmarc.com/ - DMARC
+- https://github.com/goabstract/Awesome-Design-Tools
+- https://github.com/jstrieb/systems-programming-cheat-sheet
 
 ### blog
 
@@ -237,6 +240,7 @@ isThought: true
 
 ## tools
 
+- https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
 - https://ceph.io/ - distributed storage
 - https://falstad.com/circuit/ - electronic circuit simulator
@@ -267,6 +271,7 @@ isThought: true
 - https://appchart.c-map.com/ - map for boat
 - https://jvilk.com/MakeTypes/ - generate types from JSON
 - https://github.com/tungs/timecut - record smooth movies of web pages
+- https://github.com/daybrush/scenejs-render - movie with css
 - https://github.com/chriszarate/bookmarkleter - create bookmarklet
 - https://osintframework.com/ - OSINT
 - https://yums.email/ - recipe scraping
@@ -284,7 +289,6 @@ isThought: true
 - https://github.com/sickcodes/Docker-OSX - run macOS VM in a Docker
 - https://www.alwaysdata.com/ - hosting
 - https://www.mcrpg.com/kohi-click-test/ - minecrafter test
-- https://github.com/daybrush/scenejs-render - movie with css
 - https://github.com/Z4nzu/hackingtool - ALL IN ONE Hacking Tool For Hackers
 - https://github.com/MatrixTM/MHDDoS - DDoS Attack Script Python3
 - https://github.com/greiman/SdFat
@@ -297,8 +301,6 @@ isThought: true
 - https://github.com/ocornut/imgui - GUI for C++
 - https://lehollandaisvolant.net/tout/tools/
 - https://online.visual-paradigm.com/drive/ - diagram
-- https://github.com/goabstract/Awesome-Design-Tools
-- https://github.com/jstrieb/systems-programming-cheat-sheet
 - https://github.com/fathyb/carbonyl - Chromium running inside your terminal
 - https://github.com/google/osv-scanner - scan for vulnerabilities
 - https://github.com/wolfpld/tracy - frame profiler
@@ -322,7 +324,6 @@ isThought: true
 - https://ngrok.com/ - make tunnels
 - https://48hr.email/ - disposable email
 - https://github.com/yt-dlp/yt-dlp - youtube-dl
-- http://libpng.org/ - libpng reference
 - https://github.com/google/guetzli - JPEG encoder
 - https://rclone.org - easily sync file in clouds
 - https://github.com/saulpw/visidata - terminal spreadsheet multitool
