--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -84,6 +84,7 @@ isThought: true
 
 ## reading
 
+- https://www.numbeo.com/cost-of-living/ - compare cost of living
 - https://browser.engineering/ - web browser engine
 - http://fpgacpu.ca/fpga/ - FPGA
 - https://subseawirelessgroup.com - underwater wireless communication
