--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -241,6 +241,8 @@ isThought: true
 
 ## tools
 
+- https://osmand.net/ - offline maps
+- https://ioverlander.com/ - place for travelers
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
 - https://ceph.io/ - distributed storage
