--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -65,14 +65,16 @@ Useful links for self-study:
 
 ## Boat cateogries
 
-| Category | Wind (Beaufort) | Wave height (m) |
-|----------|-----------------|-----------------|
+| Category | Wind (Beaufort) | Wave height (m)   |
+|----------|-----------------|-------------------|
 | A        | `> 8`           |     `> 4 m`       |
 | B        | `< 8`           |     `< 4 m`       |
 | C        | `< 6`           |     `< 2 m`       |
 | D        | `< 4`           |     `< 0.3 m`     |
 
 ## Others
+
+Boston Whaler Unsinkable Legend (even cut in half)
 
 - https://www.recyclermonbateau.fr/
 - https://www.vesselfinder.com/
