--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -45,7 +45,12 @@ Useful links for self-study:
 
 ---
 
+<details>
+<summary>
+
 ### Beaufort Scale (Wind)
+
+</summary>
 
 | Beaufort | Wind (km/h) | Wind (knots) | Description | French description |
 |----------|-------------|--------------|-------------|--------------------|
@@ -63,7 +68,12 @@ Useful links for self-study:
 | 11       | 103-117     | 56-63        | Violent storm| Violente tempête  |
 | 12       | > 117       | > 63         | Hurricane   | Ouragan           |
 
+</details>
+
+<details>
+<summary>
 ## Boat cateogries
+</summary>
 
 | Category | Wind (Beaufort) | Wave height (m)   |
 |----------|-----------------|-------------------|
@@ -71,6 +81,8 @@ Useful links for self-study:
 | B        | `< 8`           |     `< 4 m`       |
 | C        | `< 6`           |     `< 2 m`       |
 | D        | `< 4`           |     `< 0.3 m`     |
+
+</details>
 
 ## Others
 
@@ -82,3 +94,4 @@ Boston Whaler Unsinkable Legend (even cut in half)
 - https://www.windy.com/
 - https://fr.windfinder.com/
 - https://www.navily.com/
+- https://www.youtube.com/watch?v=UFrHUY-egFA&list=PLciYMfFOTAZYZmHvnFOopuSAh-XC-REGL
