--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -61,6 +61,7 @@ isThought: true
 - https://eyecannndy.com/ - video transitions
 - https://www.analogue.co/ - video game console
 - https://mcresourcepile.github.io/ - minecraft PvP maps
+- https://velvetyne.fr/ - fonts
 
 ## CTFs and cybersecurity
 
