--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -89,6 +89,7 @@ isThought: true
 
 - https://www.fibre.wiki/
 - https://www.numbeo.com/cost-of-living/ - compare cost of living
+- https://ohshitgit.com/ - maybe save your git
 - https://browser.engineering/ - web browser engine
 - http://fpgacpu.ca/fpga/ - FPGA
 - https://subseawirelessgroup.com - underwater wireless communication
