--- a/src/content/post/well-known.mdx
+++ b/src/content/post/well-known.mdx
@@ -9,10 +9,12 @@ isThought: true
 
 - Fabrice Bellard - https://bellard.org/ | to many to list
 - Terry A. Davis | [TempleOS](https://templeos.org/)
-- Rui Ueyama - https://www.sigbus.info/ | 8cc, ldd, mold
+- Linus Tovalds | [Linux](https://www.kernel.org/), [Git](https://git-scm.com/)
 - David Peter - https://david-peter.de/ | [fd](https://github.com/sharkdp/fd), [hyperfine](https://github.com/sharkdp/hyperfine), [bat](https://github.com/sharkdp/bat), [hexyl](https://github.com/sharkdp/hexyl), [pastel](https://github.com/sharkdp/pastel)
-- Salvatore Sanfilippo - http://invece.org/ | redis
-- Justine Tunney - https://justine.lol/ | [cosmopolitan](https://justine.lol/cosmopolitan/)
 - Mitchell Hashimoto - https://mitchellh.com/ | hashicorp
+- Donald Knuth - https://www-cs-faculty.stanford.edu/~knuth/ | [TeX](https://www.tug.org/), The Art of Computer Programming
+- Salvatore Sanfilippo - http://invece.org/ | redis
 - Andrew Kelley - https://andrewkelley.me/ | [zig](https://ziglang.org/)
 - George Hotz - https://geohot.com/ | [comma.ai](https://comma.ai/), [tinygrad](https://tinygrad.org/)
+- Justine Tunney - https://justine.lol/ | [cosmopolitan](https://justine.lol/cosmopolitan/)
+- Rui Ueyama - https://www.sigbus.info/ | 8cc, ldd, mold
