--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -91,6 +91,8 @@ isThought: true
 - https://www.numbeo.com/cost-of-living/ - compare cost of living
 - https://ohshitgit.com/ - maybe save your git
 - https://browser.engineering/ - web browser engine
+- https://github.com/you-dont-need/You-Dont-Need-GUI - you don't need GUI
+- https://github.com/jlevy/the-art-of-command-line
 - http://fpgacpu.ca/fpga/ - FPGA
 - https://subseawirelessgroup.com - underwater wireless communication
 - https://manipulation.csail.mit.edu/ - robotics
@@ -134,7 +136,7 @@ isThought: true
 - https://www.youtube.com/playlist?list=PLSFF03yVNdA6bGYAUyLYRopM2bZbyJuQE - Le coeur a ses raisons saison 2
 - https://www.youtube.com/watch?v=BieAw6lwntU - Just use Matrix.
 - https://www.youtube.com/watch?v=OAH0MoAv2CI - Cuts & Transitions 101
-- https://makefiletutorial.com/
+- https://makefiletutorial.com/ - Makefile
 - https://github.com/cnlohr/minimdnsd/
 - https://thecopenhagenbook.com/ - guideline for auth in web applications
 - https://cheeaun.github.io/repokemon/ - index of projects using pokemon names
@@ -250,6 +252,7 @@ isThought: true
 - https://ioverlander.com/ - place for travelers
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
+- https://crontab.guru/ - cron expression
 - https://ceph.io/ - distributed storage
 - https://falstad.com/circuit/ - electronic circuit simulator
 - https://github.com/luigifcruz/CyberEther
