--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -67,6 +67,7 @@ isThought: true
 
 - https://crackmes.one/ - reverse
 - https://www.newbiecontest.org/
+- https://www.how2neovim.io/ - how to set up neovim
 - https://www.root-me.org/
 - https://microcorruption.com/ - pwn / iot
 - https://ctf101.org/ - documentation
