--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -62,6 +62,7 @@ isThought: true
 - https://www.analogue.co/ - video game console
 - https://mcresourcepile.github.io/ - minecraft PvP maps
 - https://velvetyne.fr/ - fonts
+- https://github.com/rastapasta/mapscii - ASCII map
 
 ## CTFs and cybersecurity
 
