--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -35,6 +35,8 @@ Useful links for self-study:
 - https://www.youtube.com/watch?v=MvjVB9CMn7Y
 - https://www.youtube.com/watch?v=BmzW14K9abI&list=PLyHWd4LxGoS8cdwh0unZXqVA3AqHoeDPU
 
+{/*
+
 ### Permis hauturier
 
 | Equipment     | Price |
@@ -42,6 +44,16 @@ Useful links for self-study:
 | Map           | 40€   |
 | Regle de Cras | 20€   |
 | Compas        | 20€   |
+
+*/}
+
+
+### CRR
+
+- https://www.anfr.fr/gerer/radiomaritime/le-crr
+- Price: 78€
+
+Read the CRR manual, train once or twice on the ANFR plateform (https://www.anfr.fr/entrainement_crr/), then train on https://www.loisirs-nautic.fr/ then you'll be ready for the exam.
 
 ---
 
