--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -27,6 +27,12 @@ isThought: true
 - https://www.aaaaaaaaaa.org/
 - https://atomicsemi.com/
 
+## Others
+
+- https://eures.europa.eu/
+- https://france-volontaires.org/
+- https://mon-vie-via.businessfrance.fr/
+
 ## Design
 
 - https://madebyevan.com/dft/ - Discrete Fourier Transform Demo
