--- a/src/content/post/jscontact/jscontact.mdx
+++ b/src/content/post/jscontact/jscontact.mdx
@@ -1,7 +1,6 @@
 ---
 title: jscontact
 publishDate: 2025-01-29
-customSlug: jscontact
 isDev: true
 ---
 
@@ -23,3 +22,14 @@ Links:
 
 - https://docs.rs/jscontact - documentation
 - https://github.com/Its-Just-Nans/jscontact - repository
+
+
+<Thought>
+
+Message for linkedin and recruitment company: when is someone going to create the RFC for sharing résumé data between candidates and companies? Like RFC9553 but improved for résumé.
+
+<br/>
+
+And more generally for online applications !
+
+</Thought>
