--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -1,8 +1,6 @@
 ---
 title: Boat License
 publishDate: 2025-04-04
-customSlug: boat-license
-draft: true
 isEvent: true
 ---
 
@@ -19,11 +17,16 @@ isEvent: true
 
 4 types of boat licenses in France:
 
+import Center from "../../../components/Center.astro"
+
+<Center>
+
 | Base license   | Extension                         |
 |----------------|-----------------------------------|
 | Permis côtier  | Hauturier                         |
 | Permis fluvial | Grande plaisance eaux intérieures |
 
+</Center>
 
 Great website for blank exams: https://www.loisirs-nautic.fr/
 
@@ -84,7 +87,7 @@ Read the CRR manual, train once or twice on the ANFR plateform (https://www.anfr
 
 <details>
 <summary>
-## Boat cateogries
+## Boat categories
 </summary>
 
 | Category | Wind (Beaufort) | Wave height (m)   |
@@ -98,8 +101,7 @@ Read the CRR manual, train once or twice on the ANFR plateform (https://www.anfr
 
 ## Others
 
-Boston Whaler Unsinkable Legend (even cut in half)
-
+- Boston Whaler Unsinkable Legend (even cut in half)
 - https://www.recyclermonbateau.fr/
 - https://www.vesselfinder.com/
 - https://www.marinetraffic.com/
