--- a/src/content/post/jscontact/jscontact.mdx
+++ b/src/content/post/jscontact/jscontact.mdx
@@ -1,7 +1,7 @@
 ---
 title: jscontact
 publishDate: 2025-01-29
-tags: ["dev"]
+tags: ["business-idea", "dev"]
 ---
 
 `jscontact` is a lib implementing the RFC 9553 (https://www.rfc-editor.org/rfc/rfc9553.html).
