--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -98,6 +98,7 @@ tags: ["thought"]
 - https://fcsc.fr/
 - https://kalmarc.tf/
 - https://insomnihack.ch/contest/
+- https://angr.io/
 
 ## reading
 
@@ -266,6 +267,7 @@ tags: ["thought"]
 - https://ioverlander.com/ - place for travelers
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
+- https://github.com/mborgerson/gdbstub - debugging
 - https://crontab.guru/ - cron expression
 - https://ceph.io/ - distributed storage
 - https://falstad.com/circuit/ - electronic circuit simulator
