--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -265,6 +265,7 @@ tags: ["thought"]
 
 - https://osmand.net/ - offline maps
 - https://ioverlander.com/ - place for travelers
+- https://float.exposed/ - inspect your floating number
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
 - https://github.com/mborgerson/gdbstub - debugging
