--- a/src/content/post/cool-quotes/cool-quotes.mdx
+++ b/src/content/post/cool-quotes/cool-quotes.mdx
@@ -54,13 +54,13 @@ export const Quote = ({ author = "", quote = "", children = null }) => {
 
 <Quote quote="In academia, if it's good you publish it. In industry, if it's good you keep it secret" author={"Terry A. Davis"} />
 
-<Quote quote="Un bâtiment écologique est un bâtiment qu'on ne construit pas" author={"Jean Sébastien GOMEZ"} />
+<Quote quote="Un bâtiment écologique est un bâtiment qu'on ne construit pas" author="Jean-Sébastien GOMEZ" />
 
-<Quote quote="Un trou noir c'est troublant" author={"Oliver Hudry"} />
+<Quote quote="Un trou noir c'est troublant" author="Olivier Hudry" />
 
-<Quote quote={"Health is invisible to the healthy"} author="/"/>
+<Quote quote="Health is invisible to the healthy" author="/"/>
 
-<Quote quote="video games should have outtakes in the credits that show all the funny bugs and glitches that happened during development" author={"@eigenborn - Twitter - 2019-06-30"} />
+<Quote quote="video games should have outtakes in the credits that show all the funny bugs and glitches that happened during development" author="@eigenborn - Twitter - 2019-06-30" />
 
 <Quote quote="The best way to predict the future is to invent it" author="Alan Kay" />
 
@@ -75,3 +75,7 @@ import ImgBrad from "./be_who_you_needed.png"
 <Quote quote="Be who you needed when you were younger." author="Brad Montague">
     <img src={ImgBrad.src} width="50%" alt="Be who you needed when you were younger - Brad Montague" />
 </Quote>
+
+<Quote quote="It doesn't matter who we are. What matters is our plan" author="Bane - The Dark Knight Rises - 2012" />
+
+<Quote quote="La vie est une situation délicate" author="Martine - Cuisine et Dépendances - 1993" />
