--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -292,6 +292,7 @@ tags: ["thought"]
 - https://gitlab.lisn.upsaclay.fr/texlive/luatex - latex engine
 - https://syscalls.mebeim.net - syscalls
 - https://www.sqltranslate.app/
+- https://ss64.com/ - command line reference
 - https://github.com/erebe/wstunnel - tunnel ws or http2
 - https://github.com/FiloSottile/mkcert - locally trusted certificates
 - https://hexed.it/ - hex editor in browser
@@ -313,6 +314,7 @@ tags: ["thought"]
 - https://carbon.now.sh/ - display code as image
 - https://www.piliapp.com/ - many useful tools
 - https://github.com/0xsyr0/OSCP - cheat sheet
+- https://vim.rtorr.com/ - vim cheat sheet
 - https://travelboast.com/ - show people your trip
 - https://www.beeper.com/ - all your chats in one app
 - https://github.com/sickcodes/Docker-OSX - run macOS VM in a Docker
