--- a/src/content/post/well-known/well-known.mdx
+++ b/src/content/post/well-known/well-known.mdx
@@ -11,10 +11,12 @@ tags: ["thought"]
 - Terry A. Davis | [TempleOS](https://templeos.org/)
 - Linus Tovalds | [Linux](https://www.kernel.org/), [Git](https://git-scm.com/)
 - David Peter - https://david-peter.de/ | [fd](https://github.com/sharkdp/fd), [hyperfine](https://github.com/sharkdp/hyperfine), [bat](https://github.com/sharkdp/bat), [hexyl](https://github.com/sharkdp/hexyl), [pastel](https://github.com/sharkdp/pastel)
-- Mitchell Hashimoto - https://mitchellh.com/ | hashicorp
+- Mitchell Hashimoto - https://mitchellh.com/ | hashicorp, [ghostty](https://ghostty.org/)
 - Donald Knuth - https://www-cs-faculty.stanford.edu/~knuth/ | [TeX](https://www.tug.org/), The Art of Computer Programming
 - Salvatore Sanfilippo - http://invece.org/ | redis
 - Andrew Kelley - https://andrewkelley.me/ | [zig](https://ziglang.org/)
 - George Hotz - https://geohot.com/ | [comma.ai](https://comma.ai/), [tinygrad](https://tinygrad.org/)
 - Justine Tunney - https://justine.lol/ | [cosmopolitan](https://justine.lol/cosmopolitan/)
 - Rui Ueyama - https://www.sigbus.info/ | 8cc, ldd, mold
+- Emil Ernerfeldt - https://www.ilikebigbits.com/ | [egui](https://www.egui.rs/), [rerun](https://rerun.io/)
+- Rich Harris | Rollup, [Svelte](https://svelte.dev/)
