--- a/src/content/post/listening-to-music/listening-to-music.mdx
+++ b/src/content/post/listening-to-music/listening-to-music.mdx
@@ -31,6 +31,14 @@ tags: ["thought"]
 
 - ZZCCMXTP (2022)
 
+## 2018
+
+- Sofi Tukker - TreeHouse
+
+## 2016
+
+- Buku - No Drama EP
+
 ## Others
 
 - Tomppabeats
