--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -266,6 +266,7 @@ tags: ["thought"]
 
 - https://osmand.net/ - offline maps
 - https://ioverlander.com/ - place for travelers
+- https://gitleaks.io/ - find secrets in git repo
 - https://float.exposed/ - inspect your floating number
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
