--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -109,6 +109,7 @@ tags: ["thought"]
 - https://github.com/you-dont-need/You-Dont-Need-GUI - you don't need GUI
 - https://github.com/jlevy/the-art-of-command-line
 - http://fpgacpu.ca/fpga/ - FPGA
+- https://github.com/dylanaraps/pure-bash-bible - bash tutorial
 - https://subseawirelessgroup.com - underwater wireless communication
 - https://manipulation.csail.mit.edu/ - robotics
 - https://compileroptimizations.com/ - compiler optimizations
