--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -68,6 +68,7 @@ tags: ["thought"]
 - https://www.analogue.co/ - video game console
 - https://mcresourcepile.github.io/ - minecraft PvP maps
 - https://velvetyne.fr/ - fonts
+- https://river-runner-global.samlearner.com/ - water flow on earth
 - https://github.com/rastapasta/mapscii - ASCII map
 
 ## CTFs and cybersecurity
