--- a/src/content/post/quiz-json-draft/quiz-json-draft.mdx
+++ b/src/content/post/quiz-json-draft/quiz-json-draft.mdx
@@ -69,14 +69,14 @@ Each `card`contains 3 fields :
 {
     "title":{},
     "lesson": {},
-    "quizes":[{}]
+    "quizzes":[{}]
 }
 ```
 > Legend :
 >
 > - `title`: a `content object`, it contains the title of the card
 > - `lesson`: a `content object`, it contains the lesson of the card 
-> - `quizes`: an array of  `quiz object`, it contains `quiz object`
+> - `quizzes`: an array of  `quiz object`, it contains `quiz object`
 
 ## `quiz object`
 
@@ -107,7 +107,7 @@ A quiz can have multiple form, the quiz object contains the attribute `type` whi
 
 ## Versions
 
-### - 0.0.0
+### 0.0.0
 
 - Add the draft
 - In the `content object`, `type` attribute support :
@@ -117,3 +117,7 @@ A quiz can have multiple form, the quiz object contains the attribute `type` whi
 |     `html`    | the string is a HTML string, it may contains HTML tags |
 |   `markdown`  | the string is in a markdown format                     |
 |   `string`    | the string is normal                                   |
+
+### 0.0.1
+
+- Typos: from `quizes` to `quizzes`
