--- a/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
+++ b/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
@@ -10,12 +10,19 @@ The crème de la crème of English expression
 
 I often read english articles and found some treasure in them, here is a non-exhausive list:
 
--   [the cat's pyjamas](https://en.wiktionary.org/wiki/the_cat%27s_pyjamas)
--   [under the hood](https://en.wiktionary.org/wiki/under_the_hood)
--   [top notch](https://en.wiktionary.org/wiki/top_notch)
--   [wishy-washy](https://en.wiktionary.org/wiki/wishy-washy)
--   [you can't have your cake and eat it too!](https://en.wiktionary.org/wiki/have_one%27s_cake_and_eat_it_too)
--   [cut your teeth on](https://en.wiktionary.org/wiki/cut_one%27s_teeth)
--   [the lion's share](https://en.wiktionary.org/wiki/lion%27s_share)
+- [the cat's pyjamas](https://en.wiktionary.org/wiki/the_cat%27s_pyjamas): something outstanding, excellent, or highly admired
+- [under the hood](https://en.wiktionary.org/wiki/under_the_hood): in its internal workings
+- [top notch](https://en.wiktionary.org/wiki/top_notch): the highest quality
+- [wishy-washy](https://en.wiktionary.org/wiki/wishy-washy): lacking in commitment
+- [you can't have your cake and eat it too!](https://en.wiktionary.org/wiki/have_one%27s_cake_and_eat_it_too): enjoy two desirable but mutually exclusive things at the same time
+- [cut your teeth on](https://en.wiktionary.org/wiki/cut_one%27s_teeth): to gain early experience
+- [the lion's share](https://en.wiktionary.org/wiki/lion%27s_share):  the largest or best portion of something
+- [the fat is in the fire](https://en.wiktionary.org/wiki/the_fat_is_in_the_fire): trouble will happen soon
+- [in lieu of](https://en.wiktionary.org/wiki/in_lieu_of): instead of
+- [under the weather](https://en.wiktionary.org/wiki/under_the_weather): feeling sick or unwell
+- [hearing crickets](https://idioms.thefreedictionary.com/I+hear+crickets): complete silence or no response
+
+
+See also [Anglish](https://anglish.org/wiki/Anglish) (english++)
 
 Don't worry I will maintain this list!
