--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -278,6 +278,9 @@ tags: ["thought"]
 - https://falstad.com/circuit/ - electronic circuit simulator
 - https://github.com/luigifcruz/CyberEther
 - https://whatsmyname.app/
+- https://www.carcarekiosk.com/
+- https://www.startmycar.com/
+- https://makemydrivefun.com/ - make my drive fun
 - https://remonterletemps.ign.fr/
 - https://sailboat.guide/ - sailboat guide
 - https://selfh.st/apps/ - self hosted apps
