--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -139,7 +139,7 @@ import LogoMAD from "./logo_mad.png"
 
 I was in charge of the compost department at the MaD association (Télécom Paris sustainable development association).
 
-Note that I will always think the current logo is hideous, [I made a better one](https://github.com/Its-Just-Nans/logo-mad) (of course), but they didn't want to change it.
+Note that I will always think the current logo is hideous, [I made a better one](https://n4n5.dev/articles/logo-mad) (of course), but they didn't want to change it.
 
 <Space />
 
