add Mr.FRATI quote

--- a/src/content/post/cool-quotes/cool-quotes.mdx
+++ b/src/content/post/cool-quotes/cool-quotes.mdx
@@ -79,3 +79,5 @@ import ImgBrad from "./be_who_you_needed.png"
 <Quote quote="It doesn't matter who we are. What matters is our plan" author="Bane - The Dark Knight Rises - 2012" />
 
 <Quote quote="La vie est une situation délicate" author="Martine - Cuisine et Dépendances - 1993" />
+
+<Quote quote="Il n'y a pas de problemes, que des challenges" author="Stephane FRATI" />
