--- a/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
+++ b/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
@@ -21,7 +21,7 @@ I often read english articles and found some treasure in them, here is a non-exh
 - [in lieu of](https://en.wiktionary.org/wiki/in_lieu_of): instead of
 - [under the weather](https://en.wiktionary.org/wiki/under_the_weather): feeling sick or unwell
 - [hearing crickets](https://idioms.thefreedictionary.com/I+hear+crickets): complete silence or no response
-
+- [the final nail in the coffin](https://en.wiktionary.org/wiki/final_nail_in_the_coffin) the last event or action that causes the failure of something that was already in decline or doomed
 
 See also [Anglish](https://anglish.org/wiki/Anglish) (english++)
 
