--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -123,6 +123,7 @@ tags: ["thought"]
 - https://github.com/tpn/pdfs - programming books
 - https://makeityourself.org/ - learn how to make things
 - https://ziglang.org/
+- https://deepwiki.com/ - wiki powered by AI
 - https://github.com/dendibakh/perf-ninja - performance optimization
 - http://loeildelaphotographie.com
 - https://lgtm.com/#explore
