--- a/src/content/post/cool-gifs/cool-gifs.mdx
+++ b/src/content/post/cool-gifs/cool-gifs.mdx
@@ -51,9 +51,11 @@ A non-exhaustive list of cool GIFs I like.
 
 <GifDisplayer url="dobby_having_seizure.gif" text="Dobby having a seizure" />
 ---
+<GifDisplayer url="iron_man.gif" text="I'm the best" />
+---
+<GifDisplayer url="unlimited_power.gif" text='UNLIMITED POWER' />
+---
 <GifDisplayer url="obviously_not.gif" text='From "Tron: Legacy"' />
 ---
 <GifDisplayer url="tes_un_connard_toi.gif" text='Gérard Depardieu in "Les fugitifs"' />
----
-<GifDisplayer url="unlimited_power.gif" text='UNLIMITED POWER' />
 
