--- a/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
+++ b/src/content/post/delightful-english-expressions/delightful-english-expressions.mdx
@@ -21,7 +21,12 @@ I often read english articles and found some treasure in them, here is a non-exh
 - [in lieu of](https://en.wiktionary.org/wiki/in_lieu_of): instead of
 - [under the weather](https://en.wiktionary.org/wiki/under_the_weather): feeling sick or unwell
 - [hearing crickets](https://idioms.thefreedictionary.com/I+hear+crickets): complete silence or no response
-- [the final nail in the coffin](https://en.wiktionary.org/wiki/final_nail_in_the_coffin) the last event or action that causes the failure of something that was already in decline or doomed
+- [the final nail in the coffin](https://en.wiktionary.org/wiki/final_nail_in_the_coffin): the last event or action that causes the failure of something that was already in decline or doomed
+- [fell of my plate](https://www.clichelist.net/fell-off-my-plate/): having forgotten to do one of many things that you were supposed to do
+- [the oldest trick in the book](https://en.wiktionary.org/wiki/the_oldest_trick_in_the_book): a way of tricking someone that is still effective although it has been used a lot
+- [nothing new under the sun](https://en.wiktionary.org/wiki/there_is_nothing_new_under_the_sun): every new idea has some sort of precedent or echo from the past
+- [cut from the same cloth](https://en.wiktionary.org/wiki/cut_from_the_same_cloth): very similar
+- [the bee's knees](https://en.wiktionary.org/wiki/the_bee%27s_knees): something or someone excellent
 
 See also [Anglish](https://anglish.org/wiki/Anglish) (english++)
 
