--- a/src/content/post/telecom-paris/telecom-paris.mdx
+++ b/src/content/post/telecom-paris/telecom-paris.mdx
@@ -20,6 +20,61 @@ Equivalent to a top-tier university in the UK/US.
     - major in *RIO* (networks and IoT)
     - in apprenticeship at Quandela https://www.quandela.com/
 
+
+## Prague trip
+
+> Trip from 2022-11-12 to 2022-11-19
+
+[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
+
+
+One week course on `CTU13: Company Crisis` at Czech Technical University in Prague.
+
+import MapPoints from "../../../components/MapPoints.astro"
+import pointsPrague from "../../../assets/prague-trip/records.json"
+
+<MapPoints points={pointsPrague} height={400} view={[50.08, 14.42]}/>
+
+
+## WES weekend
+
+> (ski week-end) during 2023-01-14 to 2023-01-17 at Risoul
+
+- https://n4n5.dev/sportiva/activity/8396961242/
+- https://n4n5.dev/sportiva/activity/8401435913/
+- https://n4n5.dev/sportiva/activity/8406715380/
+
+## WER weekend
+
+> (hiking week-end) during 2023-05-18 to 2023-05-20 at Mont-Blanc
+
+But also rafting and via ferrata!
+
+- https://sportiva.n4n5.dev/activity/9158792097/
+- https://sportiva.n4n5.dev/activity/9159198369/
+
+## WEFA weekend
+
+> (end of year week-end) during 2023-05-08 to 2023-05-12 at Saint-Léger-les-Mélèzes
+
+But also rafting and hiking!
+
+## Warsaw trip
+
+> Trip from 2023-11-18 to 2023-11-25
+
+[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
+
+One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw University of Technology.
+
+import pointsWarsaw from "../../../assets/warsaw-trip/records.json"
+
+<MapPoints points={pointsWarsaw} height={400} view={[52.22, 21.0]}/>
+
+<br />
+
+You need to go to https://www.pyzyflakigorace.pl/
+
 ---
 
 import { Image } from "astro:assets";
