--- a/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
+++ b/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
@@ -3,7 +3,7 @@ title: Work at NextSourcia
 publishDate: 2021-09-06
 customSlug: apprenticeship-nextsourcia
 isWork: true
-tags: ["dev", "job", "school"]
+tags: ["job", "school"]
 ---
 
 > From 2020-10-05 to 2021-09-06
