--- a/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
+++ b/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
@@ -1,7 +1,7 @@
 ---
 title: Work at Quandela
 publishDate: 2024-08-31
-tags: ["dev", "job", "school"]
+tags: ["job", "school"]
 ---
 
 > From 2022-09-15 to 2024-08-31
