--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -273,6 +273,7 @@ tags: ["thought"]
 - https://float.exposed/ - inspect your floating number
 - https://react-icons.github.io/react-icons/ - icons
 - https://mempool.space/ - bitcoin blocks
+- https://joeyh.name/code/moreutils/ - more utils cmd
 - https://github.com/mborgerson/gdbstub - debugging
 - https://crontab.guru/ - cron expression
 - https://ceph.io/ - distributed storage
