--- a/src/content/post/bel-art/bel-art.mdx
+++ b/src/content/post/bel-art/bel-art.mdx
@@ -2,7 +2,7 @@
 title: Bel art at Rezel
 publishDate: 2023-09-16
 customSlug: bel-art
-tags: ["event"]
+tags: ["thought"]
 ---
 
 ## 2022-01-25 - The beginning
@@ -27,7 +27,7 @@ Bel-art has accomplished:
 -   Setting up an HTTP proxy (for scraping)
 -   Hosting the Eternal index (as a backup)
 -   Hosting a CSV for a subject and thus for students of a subject
--   Assisting people in [INF103](https://inf103.telecom-paris.fr/inf103/)
+-   Assisting people in INF103 (java programming)
 -   Helping people :)
 
 ---
