--- a/src/content/post/rezel/rezel.mdx
+++ b/src/content/post/rezel/rezel.mdx
@@ -5,7 +5,7 @@ customSlug: rezel
 tags: ["thought"]
 ---
 
-Rezel is an association that provides services for Télécom Paris associations and students (cloud storage, communication, web hosting, etc.). See more at https://rezel.net/
+Rezel is an association that provides services for students and students associations (cloud storage, communication, web hosting, etc.). See more at https://rezel.net/
 
 
 import Thought from "../../../components/Thought.astro"
