--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -2,7 +2,7 @@
 title: Student associations
 publishDate: 2024-01-20
 customSlug: telecom-paris-student-associations
-tags: ["school"]
+tags: ["thought"]
 ---
 
 > A brief description of my participation in student associations at Télécom Paris
