update to constants

--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -181,7 +181,7 @@ Telecom Etude is one of the most serious associations, which is quite normal bec
 
 My principal mission was to create a new, clean website (from scratch). As it is mostly a static website, I used [Astro](https://astro.build) to generate the pages. Note that the repo is mostly public: [github.com/telecom-etude/website](https://github.com/telecom-etude/website)!
 
-I also participated as a developer for a mission (more info [here](https://n4n5.dev/history/telecom-etude-mission/)).
+I also participated as a developer for a mission (more info [here](https://thoughts.n4n5.dev/telecom-etude-mission/)).
 
 Do you have a project? Contact Telecom Etude here: [telecom-etude.fr](https://telecom-etude.fr)
 
