--- a/src/content/post/telecom-paris/telecom-paris.mdx
+++ b/src/content/post/telecom-paris/telecom-paris.mdx
@@ -77,6 +77,16 @@ You need to go to https://www.pyzyflakigorace.pl/
 
 ---
 
+Here are my Rezel membership dates:
+
+- 2021-09-07
+- 2022-09-05
+- 2023-09-03
+- 2024-09-05
+- 2025-08-29
+
+---
+
 import { Image } from "astro:assets";
 import logo from "./telecom-paris.png";
 
