--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -15,7 +15,7 @@ tags: ["event"]
 
 4 types of boat licenses in France:
 
-import Center from "../../../components/Center.astro"
+import Center from "@components/Center.astro"
 
 <Center>
 
