--- a/src/content/post/climbing-shoes/climbing-shoes.mdx
+++ b/src/content/post/climbing-shoes/climbing-shoes.mdx
@@ -8,7 +8,7 @@ tags: ["business-idea", "thought"]
 Fact: Climbing shoes smell.
 
 
-import Thought from "../../../components/Thought.astro"
+import Thought from "@components/Thought.astro"
 
 
 <br/>
