--- a/src/content/post/telecom-paris/telecom-paris.mdx
+++ b/src/content/post/telecom-paris/telecom-paris.mdx
@@ -30,8 +30,8 @@ Equivalent to a top-tier university in the UK/US.
 
 One week course on `CTU13: Company Crisis` at Czech Technical University in Prague.
 
-import MapPoints from "../../../components/MapPoints.astro"
-import pointsPrague from "../../../assets/prague-trip/records.json"
+import MapPoints from "@components/MapPoints.astro"
+import pointsPrague from "@assets/prague-trip/records.json"
 
 <MapPoints points={pointsPrague} height={400} view={[50.08, 14.42]}/>
 
@@ -67,7 +67,7 @@ But also rafting and hiking!
 
 One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw University of Technology.
 
-import pointsWarsaw from "../../../assets/warsaw-trip/records.json"
+import pointsWarsaw from "@assets/warsaw-trip/records.json"
 
 <MapPoints points={pointsWarsaw} height={400} view={[52.22, 21.0]}/>
 
