--- a/src/content/post/versasense-summer-job/versasense-summer-job.mdx
+++ b/src/content/post/versasense-summer-job/versasense-summer-job.mdx
@@ -34,8 +34,8 @@ Worked with:
 - Jira
 
 
-import MapPoints from "../../../components/MapPoints.astro"
-import points from "../../../assets/versasense-summer-job/records.json"
+import MapPoints from "@components/MapPoints.astro"
+import points from "@assets/versasense-summer-job/records.json"
 
 <MapPoints points={points} height={400} zoom={13} view={[50.879,4.700]}/>
 
