--- a/src/content/post/canada-trip/canada-trip.mdx
+++ b/src/content/post/canada-trip/canada-trip.mdx
@@ -7,8 +7,8 @@ tags: ["job"]
 ---
 
 
-import VisitingMap from "../../../components/VisitingMap.astro"
-import data from "../../../assets/canada-trip/records.json"
+import VisitingMap from "@components/VisitingMap.astro"
+import data from "@assets/canada-trip/records.json"
 
 <VisitingMap data={data}>
 
@@ -202,15 +202,15 @@ import { Image } from 'astro:assets';
 
 ---
 
-import BixiData from "../../../assets/canada-trip/bixi.json"
-import AutoTable from "../../../components/AutoTable.astro"
+import BixiData from "@assets/canada-trip/bixi.json"
+import AutoTable from "@components/AutoTable.astro"
 
 <details>
 <summary>Bixi (https://bixi.com/) data:</summary>
 
 <br/>
 
-import Thought from "../../../components/Thought.astro"
+import Thought from "@components/Thought.astro"
 
 <Thought>
 note: I should have used the monthly pass, I think it would have been cheaper.
