--- a/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
+++ b/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
@@ -21,15 +21,15 @@ AquilaCMS Development (e-commerce CMS):
 
 Worked with:
 
-- AngularJS
-- NodeJS
-- ReactJS
-- NextJS
-- MongoDB
-- Cypress (combined with bash scripts for daily automatic front-end tests)
-- Mocha (API test)
+- [AngularJS](https://angularjs.org/)
+- [NodeJS](https://nodejs.org/)
+- [ReactJS](https://reactjs.org/)
+- [NextJS](https://nextjs.org/)
+- [MongoDB](https://www.mongodb.com/)
+- [Cypress](https://www.cypress.io/) (combined with bash scripts for daily automatic front-end tests)
+- [Mocha](https://mochajs.org/) (API test)
 - GIT and github
-- Trello
+- [Trello](https://trello.com/)
 - Creation of documentation for plugin integration in Aquila
 - Creation of some Aquila plugins
 
