--- a/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
+++ b/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
@@ -25,9 +25,9 @@ Worked with:
     - [three.js](https://threejs.org/)
     - [react-three-fiber (R3F)](https://r3f.docs.pmnd.rs/)
     - [theatre.js](https://www.theatrejs.com/)
-- [Docker](https://www.docker.com/), [Harbor](https://goharbor.io/), PostGreSQL
-- Arduino
-- MQTT, Mosquitto, Prometheus, Grafana
+- [Docker](https://www.docker.com/), [Harbor](https://goharbor.io/), [PostGreSQL](https://www.postgresql.org/)
+- [Arduino](https://www.arduino.cc/)
+- MQTT, [Mosquitto](https://mosquitto.org/), [Prometheus](https://prometheus.io/), [Grafana](https://grafana.com/)
 - [Gitlab](https://about.gitlab.com/), CI/CD
 - [Confluence](https://www.atlassian.com/software/confluence), [Jira](https://www.atlassian.com/software/jira)
 - Teams, Outlook, PowerPoint
