--- a/src/content/post/telecom-paris/telecom-paris.mdx
+++ b/src/content/post/telecom-paris/telecom-paris.mdx
@@ -69,7 +69,7 @@ One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw
 
 import pointsWarsaw from "@assets/warsaw-trip/records.json"
 
-<MapPoints points={pointsWarsaw} height={400} view={[52.22, 21.0]}/>
+<MapPoints points={pointsWarsaw} height={400} view={[52.22, 21.0]} mapId="warsawMap"/>
 
 <br />
 
