--- a/src/content/post/certifications/certifications.mdx
+++ b/src/content/post/certifications/certifications.mdx
@@ -3,7 +3,7 @@ title: Certifications
 description: All my certifications
 publishDate: 2023-12-15
 customSlug: certifications
-tags: ["event"]
+tags: ["thought"]
 hidden: true
 ---
 
