--- a/src/content/post/cool-quotes/cool-quotes.mdx
+++ b/src/content/post/cool-quotes/cool-quotes.mdx
@@ -47,6 +47,8 @@ export const Quote = ({ author = "", quote = "", children = null }) => {
     );
 }
 
+> Click on them to see the author!
+
 
 <Quote quote="La mesure de l'amour, c'est d'aimer sans mesure." author={"Sermons de Saint Augustin"} />
 
