--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -224,6 +224,7 @@ tags: ["thought"]
 - https://www.c-language.org/ - C language
 - http://libpng.org/ - libpng reference
 - https://wiki.mozilla.org/Areweyet
+- https://www.recyclermonbateau.fr/ - boat recycling
 - https://c-git.github.io/
 - https://paroj.github.io/gltut/ - modern 3D graphics programming
 - https://isuckatcs.github.io/how-to-compile-your-language/
@@ -277,6 +278,11 @@ tags: ["thought"]
 - https://github.com/mborgerson/gdbstub - debugging
 - https://crontab.guru/ - cron expression
 - https://ceph.io/ - distributed storage
+- https://www.vesselfinder.com/ - boat finder
+- https://www.marinetraffic.com/ - boat finder
+- https://www.windy.com/ - wind information
+- https://windfinder.com/ - wind information
+- https://www.navily.com/ - boat anchorage
 - https://falstad.com/circuit/ - electronic circuit simulator
 - https://github.com/luigifcruz/CyberEther
 - https://whatsmyname.app/
