--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -9,9 +9,6 @@ tags: ["thought"]
 
 ## to check
 
-- https://www.yoctoproject.org/
-- https://www.openembedded.org/
-- https://buildroot.org/
 - https://tinytapeout.com/
 - https://developers.google.com/silicon
 
@@ -22,7 +19,6 @@ tags: ["thought"]
 - https://github.com/rerun-io/rerun
 - https://github.com/adafruit/Adafruit_ILI9341
 - https://github.com/juspay/hyperswitch
-- https://github.com/CADmium-Co/CADmium
 - https://github.com/vosen/ZLUDA - CUDA for AMD
 - https://www.aaaaaaaaaa.org/
 - https://atomicsemi.com/
@@ -268,6 +264,10 @@ tags: ["thought"]
 
 ## tools
 
+- https://www.yoctoproject.org/ - create custom linux distro
+- https://www.openembedded.org/
+- https://buildroot.org/
+- https://openwrt.org/ - linux for embedded devices
 - https://osmand.net/ - offline maps
 - https://ioverlander.com/ - place for travelers
 - https://gitleaks.io/ - find secrets in git repo
@@ -285,9 +285,10 @@ tags: ["thought"]
 - https://www.navily.com/ - boat anchorage
 - https://falstad.com/circuit/ - electronic circuit simulator
 - https://github.com/luigifcruz/CyberEther
-- https://whatsmyname.app/
+- https://whatsmyname.app/ - search username on many platforms
 - https://www.carcarekiosk.com/
 - https://www.startmycar.com/
+- https://anivetvoyage.com/ - travel with pets
 - https://makemydrivefun.com/ - make my drive fun
 - https://remonterletemps.ign.fr/
 - https://sailboat.guide/ - sailboat guide
